--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^18.2.0",
     "@ctrl/tinycolor": "^4.2.0",
     "chart.js": "^4.5.1",
+    "echarts": "^6.0.0",
     "ng-zorro-antd": "^18.2.1",
+    "ngx-echarts": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
